[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Shiny_Enigma_Geologic2531"
version = "0.0.1"
authors = [
  { name="Rebecca Bartels", email="beccacode@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rebeccabartels/Shiny_Enigma"
"Bug Tracker" = "https://github.com/rebeccabartels/Shiny_Enigma/blob/master/issues"
